Bug 332856 - Kdev-clang plugin doesn't find the correct includes for a Qt5/KF5 project.
Summary: Kdev-clang plugin doesn't find the correct includes for a Qt5/KF5 project.
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Language Support: CPP (Clang-based) (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR major
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-31 13:37 UTC by Antonis Tsiapaliokas
Modified: 2015-10-22 06:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
small app that reproduces the issue (2.34 KB, application/gzip)
2014-03-31 13:39 UTC, Antonis Tsiapaliokas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Antonis Tsiapaliokas 2014-03-31 13:37:35 UTC
when i open a Qt5/KF5 project the kdev-clang plugin cannot find the includes. The only completion that exists, is the content of the current file. For a Qt4/KDE4 project everything is fine.
I will attach a small example which is reproducing the issue.

Reproducible: Always

Steps to Reproduce:
1.open kdevelop
2.import a Qt5/Kf5
3.
Actual Results:  
No completion outside of the content of the current file.

Expected Results:  
the kdev-clang completion should work.
Comment 1 Antonis Tsiapaliokas 2014-03-31 13:39:16 UTC
Created attachment 85871 [details]
small app that reproduces the issue
Comment 2 Andrey 2014-07-11 06:55:19 UTC
Confirm this.
Comment 3 Sergey Kalinichev 2014-07-23 04:39:56 UTC
Git commit c83cc8cd025385494c3de9c1e424b02c8b704d67 by Sergey Kalinichev.
Committed on 19/07/2014 at 17:52.
Pushed by skalinichev into branch 'master'.

Fix include paths for QT5 projects.

This patch uses the same technique as the one used in oldcpp.
See also fadd0a9fa850883c0d3ce015048ba8bfc8df05f2 and
aed6fefc7e8ed083911bd36f7c7d06241c0357ce in KDevelop.
REVIEW: 119375

M  +32   -9    clangparsejob.cpp

http://commits.kde.org/kdev-clang/c83cc8cd025385494c3de9c1e424b02c8b704d67