Fix include paths for QT5 projects.

This patch uses the same technique as the one used in oldcpp.
See also fadd0a9fa850883c0d3ce015048ba8bfc8df05f2 and
aed6fefc7e8ed083911bd36f7c7d06241c0357ce in KDevelop.

BUG: 332856
REVIEW: 119375